--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ install:
 - git clone https://github.com/dyne/Tomb
 - cd Tomb
 - sudo make install
+- cd reiven/tomber
 script:
 # Normal tests
 - nosetests
