--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,13 @@ python:
 - "2.6"
 - "2.7"
 install:
-# Build/test dependencies
+# Install dependencies
 - sudo apt-get update
 - sudo apt-get install -y zsh pinentry-curses steghide gnupg 
-- git clone https://github.com/dyne/Tomb
-- cd Tomb
-- sudo make install
-- cd -
+- git clone https://github.com/dyne/Tomb && cd Tomb && sudo make install
 script:
 # Normal tests
-- nosetests
-notifications:
+- nosetests -v
 notifications:
   email:
     recipients:
