travis not running tests, added some pwd debugs

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ python:
 - "2.7"
 install:
 # Install dependencies
+- pwd
 - sudo apt-get update
 - sudo apt-get install -y zsh pinentry-curses steghide gnupg 
 - git clone https://github.com/dyne/Tomb && cd Tomb && sudo make install
+- pwd
 script:
 # Normal tests
 - nosetests -v
