--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,10 @@ python:
 - "2.7"
 install:
 # Install dependencies
-- pwd
 - sudo apt-get update
 - sudo apt-get install -y zsh pinentry-curses steghide gnupg 
 - git clone https://github.com/dyne/Tomb && cd Tomb && sudo make install
-- pwd
+- cd /home/travis/build/reiven/tomber
 script:
 # Normal tests
 - nosetests -v
