--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ install:
 - sudo apt-get update
 - sudo apt-get install -y zsh pinentry-curses steghide gnupg 
 - git clone https://github.com/dyne/Tomb && cd Tomb && sudo make install
+# check of Tomb was installed ok
+- tomb help
 - cd /home/travis/build/reiven/tomber
 script:
 # Normal tests
@@ -15,5 +17,5 @@ notifications:
   email:
     recipients:
       - reiven@gmail.com
-    on_success: [always|never|change] # default: change
-    on_failure: [always|never|change] # default: always
+    on_success: change # default: change
+    on_failure: always # default: always
