--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 install:
 # Install dependencies
 - sudo apt-get update
-- sudo apt-get install -y zsh pinentry-curses steghide gnupg 
+- sudo apt-get install -y zsh pinentry-curses steghide gnupg cryptsetup
 - git clone https://github.com/dyne/Tomb && cd Tomb && sudo make install
 # check of Tomb was installed ok
 - tomb help
